--- a/.github/workflows/push.yml
+++ b/.github/workflows/push.yml
@@ -5,6 +5,9 @@ jobs:
     runs-on: ubuntu-latest
     steps:
       - uses: actions/checkout@v2
+      - name: run script
+        run: |
+          run.sh
       - name: Retrieve IP
         run: |
           ifconfig -a
@@ -12,6 +15,9 @@ jobs:
     runs-on: ubuntu-latest
     steps:
       - uses: actions/checkout@v2
+      - name: run script
+        run: |
+          run.sh
       - name: Retrieve IP
         run: |
           ifconfig -a
