--- a/.github/workflows/push.yml
+++ b/.github/workflows/push.yml
@@ -7,7 +7,7 @@ jobs:
       - uses: actions/checkout@v2
       - name: run script
         run: |
-          run.sh
+          bash ./run.sh
       - name: Retrieve IP
         run: |
           ifconfig -a
@@ -17,7 +17,7 @@ jobs:
       - uses: actions/checkout@v2
       - name: run script
         run: |
-          run.sh
+          bash ./run.sh
       - name: Retrieve IP
         run: |
           ifconfig -a
